# ChangeLog for sys-devel/gdb
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.99 2006/08/24 00:53:49 vapier Exp $

*gdb-6.5-r2 (24 Aug 2006)

  24 Aug 2006; Mike Frysinger <vapier@gentoo.org> +gdb-6.5-r2.ebuild:
  Add patch for gnu hash support from upstream #144851 by Christophe Saout.

  01 Jul 2006; <solar@gentoo.org> gdb-6.5-r1.ebuild:
  - fix gdbinit file causing errors with recent gdb. bug 97409

  22 Jun 2006; <solar@gentoo.org> files/gdb-6.4-scanmem.patch,
  files/gdb-6.5-scanmem.patch, gdb-6.5-r1.ebuild:
  - fix segv in scanmem when no parms are given avoid memleak also

  22 Jun 2006; Mike Frysinger <vapier@gentoo.org>
  +files/gdb-6.5-locale.patch, gdb-6.5.ebuild:
  Fix issues with funky locales #125264 by J.

*gdb-6.5-r1 (21 Jun 2006)

  21 Jun 2006; <solar@gentoo.org> +files/gdb-6.5-scanmem.patch,
  +gdb-6.5-r1.ebuild:
  - bump scanmem patch

*gdb-6.5 (21 Jun 2006)

  21 Jun 2006; Mike Frysinger <vapier@gentoo.org> +gdb-6.5.ebuild:
  Version bump.

*gdb-6.4-r5 (18 Jun 2006)

  18 Jun 2006; Tony Vroon <chainsaw@gentoo.org>
  +files/gdb-6.4-ppc-stack.patch, +gdb-6.4-r5.ebuild:
  Apply upstream patch to get usable backtraces on PPC. Research by illusion
  <morgoth6@box43.pl> in bug #137125.

  03 May 2006; Diego Pettenò <flameeyes@gentoo.org> gdb-6.4-r4.ebuild:
  Add ~x86-fbsd keyword.

  27 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-gdb-6.1,
  files/digest-gdb-6.2.1, files/digest-gdb-6.3-r4, files/digest-gdb-6.3-r5,
  files/digest-gdb-6.4, files/digest-gdb-6.4-r1, files/digest-gdb-6.4-r2,
  files/digest-gdb-6.4-r3, files/digest-gdb-6.4-r4, Manifest:
  Fixing SHA256 digest, pass four

*gdb-6.4-r4 (16 Mar 2006)

  16 Mar 2006; Mike Frysinger <vapier@gentoo.org>
  +files/gdb-6.4-avr-eclipse.patch, +gdb-6.4-r4.ebuild:
  Add patch from upstream for avr/eclipse compat #126288 by Ian Hubbertz.

*gdb-6.4-r3 (05 Mar 2006)
