@@ -1,13 +1,19 @@
 DIST gdb-6.5-patches-1.0.tar.bz2 19595 RMD160 c3cd11a7ad5d29926df8dc30e608a239e5451247 SHA1 82ae34ac04fc59f63d7e1d7ab98aeaa79bb2a2df SHA256 590f31649dea7004107e6f186f8af6824c5fdbcef779f8eafd34e5983f3e4195
 DIST gdb-6.5.tar.bz2 14303558 RMD160 ec5138a833d0f67b3e27fde653f1a80dec79b99f SHA1 4ec883314affaecc564fd5980996b4e81119a886 SHA256 0011318d9720781d486c835e88b915f90f2c10e7101d648b64dd4739218d3faf
+DIST gdb-6.6-patches-1.0.tar.bz2 9961 RMD160 01c2b749fbd0468a2d91e78c3dac6376d453e128 SHA1 ce5fbba32dc926915f3966996368f1c698262f69 SHA256 745e82cd043ca8a3ca6b45c3c10e1f7670f111b19fbe18276929589dfacfe510
+DIST gdb-6.6.tar.bz2 14535755 RMD160 6430798ba47a1913676622db9a73bf2bcfa703be SHA1 744bd0f0740dfe6527036b1dda8fe6a08adbbaeb SHA256 6e602987298db5ddb479bbb84ce653eabd9c304957a49552245f65cdc70d43bd
 EBUILD gdb-6.5-r2.ebuild 1822 RMD160 27dc243530e29110869da42970b9154aa4403b4e SHA1 9e1361e90b6e7d28721219f2df4ca639d5d67990 SHA256 5fcabb03c537d9cc9ff2f53ec747ec9f532ccf4340d22836e03a98287d385df2
 MD5 fdc1d0ab42220b0521d2ef36d687b493 gdb-6.5-r2.ebuild 1822
 RMD160 27dc243530e29110869da42970b9154aa4403b4e gdb-6.5-r2.ebuild 1822
 SHA256 5fcabb03c537d9cc9ff2f53ec747ec9f532ccf4340d22836e03a98287d385df2 gdb-6.5-r2.ebuild 1822
-MISC ChangeLog 14556 RMD160 ca62a47b077bc57bd3eb7496d99d3c6f9ad4e80f SHA1 624a3b07c6f61e3a887ffeb1b5148f7bf63dd68c SHA256 4da6266b268399d5d0c473bdd964553dc6d7d854008adec7ec4a6ed800b4068b
-MD5 8c82406b9def7f004ffa3ec074718ea7 ChangeLog 14556
-RMD160 ca62a47b077bc57bd3eb7496d99d3c6f9ad4e80f ChangeLog 14556
-SHA256 4da6266b268399d5d0c473bdd964553dc6d7d854008adec7ec4a6ed800b4068b ChangeLog 14556
+EBUILD gdb-6.6.ebuild 1819 RMD160 295e76cd23912cf84ac0ed6348b52df8e08896a6 SHA1 95edd0c0002218d858fae5c084a4ae86fba1ba1b SHA256 e462567b023f6a1e06f8087b10523912369a56c39f78a292ae1176b0037b5575
+MD5 bfbe136e56ae84fa7cca2c30cdcc9144 gdb-6.6.ebuild 1819
+RMD160 295e76cd23912cf84ac0ed6348b52df8e08896a6 gdb-6.6.ebuild 1819
+SHA256 e462567b023f6a1e06f8087b10523912369a56c39f78a292ae1176b0037b5575 gdb-6.6.ebuild 1819
+MISC ChangeLog 14665 RMD160 502c96552c333c9bd655a6911885bde03dfb9735 SHA1 c6d1acde1f1f9bd1d6ca740923f9d650bc01ee7f SHA256 865e46a3a221d2697c2f0b6d46c1f806de673e8ce6b171c2206d7d313e7ccdb1
+MD5 bd066a83ab563c7ae2864a8ca6653a2d ChangeLog 14665
+RMD160 502c96552c333c9bd655a6911885bde03dfb9735 ChangeLog 14665
+SHA256 865e46a3a221d2697c2f0b6d46c1f806de673e8ce6b171c2206d7d313e7ccdb1 ChangeLog 14665
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
 MD5 567094e03359ffc1c95af7356395228d metadata.xml 162
 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 metadata.xml 162
@@ -15,3 +21,6 @@ SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a metadata
 MD5 26aab5e40c8e7ff608930acc1b683130 files/digest-gdb-6.5-r2 491
 RMD160 8ce10eee5a8011fce0f4834e3df2d072a5ecb49c files/digest-gdb-6.5-r2 491
 SHA256 7fd4389fc08b0a3b109fdcbb5f120d19ef040f31e362f5706a0853f10b5e837e files/digest-gdb-6.5-r2 491
+MD5 08a0f59aa79095bce1ac2c4891c0de88 files/digest-gdb-6.6 488
+RMD160 6df993e9621834ff63bcbdbd384e5a5e89029cc9 files/digest-gdb-6.6 488
+SHA256 91b5c47e3ed1487903827d5261c1595ae751e502a2bd3f32a946f247854059b3 files/digest-gdb-6.6 488
