@@ -1,0 +1,6 @@
+MD5 a54b78a18877902d4d76bcf290a97b88 gdb-6.6-patches-1.0.tar.bz2 9961
+RMD160 01c2b749fbd0468a2d91e78c3dac6376d453e128 gdb-6.6-patches-1.0.tar.bz2 9961
+SHA256 745e82cd043ca8a3ca6b45c3c10e1f7670f111b19fbe18276929589dfacfe510 gdb-6.6-patches-1.0.tar.bz2 9961
+MD5 a4df41d28dd514d64e8ccbfe125fd9a6 gdb-6.6.tar.bz2 14535755
+RMD160 6430798ba47a1913676622db9a73bf2bcfa703be gdb-6.6.tar.bz2 14535755
+SHA256 6e602987298db5ddb479bbb84ce653eabd9c304957a49552245f65cdc70d43bd gdb-6.6.tar.bz2 14535755
