@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/gdb
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.99 2006/08/24 00:53:49 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gdb/ChangeLog,v 1.100 2006/12/19 06:30:37 vapier Exp $
+
+*gdb-6.6 (19 Dec 2006)
+
+  19 Dec 2006; Mike Frysinger <vapier@gentoo.org> +gdb-6.6.ebuild:
+  Version bump.
 
 *gdb-6.5-r2 (24 Aug 2006)
 
